--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^8.11.0",
-    "nodemon": "^3.1.9"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.9",
+    "openai": "^4.86.1"
   }
 }
